--- a/css/base/normalize.css
+++ b/css/base/normalize.css
@@ -19,6 +19,10 @@ html {
 body {
   margin: 0;
 }
+*{
+  margin: 0;
+  padding:0;
+}
 
 /* HTML5 display definitions
    ========================================================================== */
